# maintenance

./: .env  .gitignore  LICENSE  README.md  pyclean.py  pyproject.toml  setup.cfg  setup.py  test_pyclean.py
pyclean/: main.py
src/maintenance/: __init__.py  clean.py
