[tool.poetry]
name = "maintenance"
version = "2020.6.13"
description = "Common tasks and coding practice"
authors = ["tarasivashchuk <taras@tarasivashchuk.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "*"
logzero = "*"
alive-progress = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
bandit = "*"
black = {version = "*", allow-prereleases = true}
isort = "*"
mypy = "*"
flake8 = "*"
flake8-bandit = "*"
flake8-black = "*"
flake8-isort = "*"
flake8-pytest = "*"
flake8-mypy = "*"

[tool.isort]
line_length = 88
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
not_skip = "__init__.py"
skip_glob = ["*/setup.py"]
filter_files = true

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \references
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
