[tool.poetry]
name = "pyclean"
version = "1.0.0"
description = "Automatically clean up files and directories recursively using glob patterns with a nice progress bar"
authors = ["tarasivashchuk <taras@tarasivashchuk.com>"]

[tool.poetry.dependencies]
python = "^3.6"
alive-progress = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
isort = "*"
flake8 = "*"

[tool.black]
inplace = true
line-length = 100
target-version = ["py38"]
verbose = true

[tool.isort]
balanced_wrapping = true
combine_as_imports = true
line_length = 100
lines_after_imports = 2
profile = "black"
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
